# rust-asr

./: .env.example  LICENSE  README.md  README_VI.md  pyproject.toml
doc/: Research-Rust-ASR.md
output/jito-solana/: 00-executive-summary.md
output/jito-solana/01-architecture/: high-level-design.md  key-decisions.md  system-context.md  tech-stack.md
output/jito-solana/02-domain-model/: core-concepts.md  data-flow.md  data-models.md
output/jito-solana/03-api-interfaces/: integration-points.md  internal-contracts.md  public-apis.md
output/jito-solana/04-critical-paths/: error-handling.md  main-flows.md  performance-hotspots.md
output/jito-solana/05-development-guide/: code-conventions.md  contribution-guide.md  getting-started.md  testing-strategy.md
output/jito-solana/06-llm-context/: codebase.1.txt  codebase.2.txt  codebase.3.txt  codebase.4.txt  codebase.5.txt  knowledge-graph-summary.md  navigation-guide.md  (+3 more)
rust_asr/: __init__.py  cli.py
rust_asr/ai/: __init__.py  ai_architecture.py  llm.py  mapper.py  prompts.py
rust_asr/analysis/: __init__.py  ai_architecture.py  api_surface.py  architecture.py  ast_analysis.py  dependency.py  knowledge_graph.py  metrics.py  modules.py  pattern_comparison.py  patterns.py
rust_asr/commands/: __init__.py  ai_analyze.py  analyze.py  architecture.py  deps.py  docs.py  fetch.py  flamegraph.py  handbook.py  modules.py  patterns.py  tracing.py
rust_asr/export/: __init__.py  api_interfaces.py  architecture.py  critical_paths.py  development_guide.py  domain_model.py  executive_summary.py  llm_context.py  llm_questions.py  pattern_library.py  semantic_index.py
(+3 files in other folders)
